# advent-of-code

./: .gitignore  pyproject.toml
advent_of_code/two_four/: five.py  four.py  one.py  six.py  three.py  two.py
tests/: conftest.py
tests/advent_of_code/two_four/: test_five.py  test_four.py  test_one.py  test_six.py  test_three.py  test_two.py
