[project]
name = "advent-of-code"
description = ""
authors = [{name = "Henry Isaacson"}]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
requires-python = ">=3.9, <3.11"

[tool.setuptools.packages.find]
include = ["advent_of_code*"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}


[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'


[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100


[tool.setuptools_scm]
local_scheme = "node-and-date"
search_parent_directories = true
version_scheme = "no-guess-dev"
fallback_version = "0.0.1"
